--- a/home.html
+++ b/home.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>This is Home Page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur eum quod sit fuga saepe sed non dicta nostrum eveniet, totam animi debitis! In quisquam aperiam fugit earum dicta praesentium doloribus?</p>
 </body>
 </html>
