--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>This is Home Page</h1>
+    <h1>This is Home Page With Dev</h1>
 
 	<h2>Test</h2>
 
